# locally-uncensored

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml  sidecar-windows.yml
docs/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
docs/blog/: abliterated-models-guide.html  best-local-ai-apps-2026.html  best-uncensored-ai-models-2026.html  can-you-run-kimi-k3-locally.html  codex-cli-universal-model-support.html  comfyui-beginners-guide.html  easiest-local-ai-image-generator.html  free-uncensored-gpt-alternatives.html  gemma-4-local-guide.html  how-to-generate-ai-videos-locally.html  how-to-run-ai-locally.html  how-to-run-flux-locally.html  how-to-run-kimi-k3.html  how-to-run-qwen-3-6-locally.html  (+25 more)
e2e/: cloud-create.spec.ts  cloud-gate.spec.ts  cloud-onboarding.spec.ts  document-chat-builtin.spec.ts  onboarding-builtin.spec.ts
landing-page/: index.html
scripts/: build-llama.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  python.rs  state.rs
src-tauri/src/commands/: agent.rs  comfy_ws.rs  download.rs  engine.rs  filesystem.rs  health.rs  install.rs  mod.rs  oauth.rs  process.rs  proxy.rs  remote.rs  repo_map.rs  search.rs  secret.rs  shell.rs  system.rs  trainer.rs  tts.rs  whisper.rs
src-tauri/windows/: installer-hooks.nsh
(+288 files in other folders)
