[package]
name = "locally-uncensored"
version = "1.2.1"
description = "Private, local AI chat & image/video generation"
authors = ["purpledoubled"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
