[package]
name = "locally-uncensored"
version = "2.0.0"
description = "Private, local AI chat & image/video generation"
authors = ["purpledoubled"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
dirs = "6"
regex = "1"
base64 = "0.22"
tempfile = "3"
futures-util = "0.3"
tokio-util = "0.7"
urlencoding = "2"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
